[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/tower_head2.png" type="Texture" id=1]
[ext_resource path="res://Assets/tower_2.png" type="Texture" id=2]
[ext_resource path="res://Tower2.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 68.8186

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[node name="Tower2" type="Node2D"]
script = ExtResource( 3 )

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 1 )

[node name="Placement" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Placement"]
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Tower" type="Sprite" parent="Area2D"]
texture = ExtResource( 2 )

[node name="TowerHead" type="Sprite" parent="Area2D"]
texture = ExtResource( 1 )

[node name="DisappearTimer" type="Timer" parent="Area2D"]
wait_time = 40.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Sight" to="." method="_on_Sight_area_entered"]
[connection signal="area_exited" from="Sight" to="." method="_on_Sight_area_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Area2D/DisappearTimer" to="." method="_on_DisappearTime_timeout"]
